online-boutique-asm-manifests/sidecars/all/sidecar-checkoutservice.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START servicemesh_all_sidecar_checkoutservice_sidecar_checkoutservice]
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: checkoutservice
spec:
  workloadSelector:
    labels:
      app: checkoutservice
  egress:
  - hosts:
    - istio-system/*
    - ./cartservice.onlineboutique.svc.cluster.local
    - ./currencyservice.onlineboutique.svc.cluster.local
    - ./emailservice.onlineboutique.svc.cluster.local
    - ./paymentservice.onlineboutique.svc.cluster.local
    - ./productcatalogservice.onlineboutique.svc.cluster.local
    - ./shippingservice.onlineboutique.svc.cluster.local
# [END servicemesh_all_sidecar_checkoutservice_sidecar_checkoutservice]
