online-boutique-asm-manifests/sidecars/all/sidecar-shippingservice.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START servicemesh_all_sidecar_shippingservice_sidecar_shippingservice]
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: shippingservice
spec:
  workloadSelector:
    labels:
      app: shippingservice
  egress:
  - hosts:
    - istio-system/*
# [END servicemesh_all_sidecar_shippingservice_sidecar_shippingservice]
